--- a/package.json
+++ b/package.json
@@ -25,8 +25,12 @@
   "devDependencies": {
     "rimraf": "^2.6.2",
     "rollup": "^0.64.1",
+    "rollup-plugin-commonjs": "^9.1.5",
     "rollup-plugin-node-resolve": "^3.3.0",
     "typescript": "^3.0.1",
     "uglify-js": "^3.4.7"
+  },
+  "dependencies": {
+    "pure-color": "^1.3.0"
   }
 }
