--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "module": "es2015",
     "moduleResolution": "node",
     "declaration": true,
+    "allowSyntheticDefaultImports": true,
     "importHelpers": true,
     "removeComments": false,
     "preserveConstEnums": true,
