--- a/package.json
+++ b/package.json
@@ -1,16 +1,30 @@
 {
   "name": "reinvented-color-wheel",
   "version": "0.0.0",
-  "description": "A vanilla-js color picker inspired by Farbtastic.",
-  "main": "reinvented-color-wheel.js",
+  "description": "HSV color picker inspired by Farbtastic Color Picker.",
+  "main": "reinvented-color-wheel.cjs.js",
   "module": "reinvented-color-wheel.mjs",
   "types": "reinvented-color-wheel.d.ts",
+  "jsdelivr": "reinvented-color-wheel.iife.min.js",
+  "unpkg": "reinvented-color-wheel.iife.min.js",
+  "files": [
+    "reinvented-color-wheel.css",
+    "reinvented-color-wheel.min.css",
+    "reinvented-color-wheel.mjs",
+    "reinvented-color-wheel.cjs.js",
+    "reinvented-color-wheel.iife.js",
+    "reinvented-color-wheel.iife.min.js",
+    "reinvented-color-wheel.d.ts"
+  ],
   "scripts": {
-    "clean": "rimraf reinvented-color-wheel.mjs reinvented-color-wheel.js reinvented-color-wheel.min.js reinvented-color-wheel.d.ts",
-    "build": "npm run clean && npm run build:es && npm run build:umd && npm run build:umd:min",
+    "clean": "rimraf reinvented-color-wheel.min.css reinvented-color-wheel.mjs reinvented-color-wheel.*.js reinvented-color-wheel.d.ts",
+    "build": "npm run clean && npm run build:css && npm run build:es && npm run build:cjs && npm run build:iife && npm run build:iife:min && npm run build:docs",
+    "build:css": "postcss reinvented-color-wheel.css -o reinvented-color-wheel.min.css -u cssnano --no-map",
     "build:es": "tsc -p . --outDir ./ && node -e \"require('fs').renameSync('reinvented-color-wheel.js','reinvented-color-wheel.mjs')\"",
-    "build:umd": "rollup -c -f umd -n ReinventedColorWheel -i reinvented-color-wheel.mjs -o reinvented-color-wheel.js",
-    "build:umd:min": "uglifyjs -m -c join_vars=true -o reinvented-color-wheel.min.js reinvented-color-wheel.js"
+    "build:cjs": "tsc -p . --outDir ./ -m commonjs && node -e \"require('fs').renameSync('reinvented-color-wheel.js','reinvented-color-wheel.cjs.js')\"",
+    "build:iife": "rollup -c -f iife -n ReinventedColorWheel -i reinvented-color-wheel.mjs -o reinvented-color-wheel.iife.js",
+    "build:iife:min": "uglifyjs -m -c join_vars=true -o reinvented-color-wheel.iife.min.js reinvented-color-wheel.iife.js",
+    "build:docs": "node -e \"var fs=require('fs');fs.copyFileSync('reinvented-color-wheel.min.css','docs/reinvented-color-wheel.min.css');fs.copyFileSync('reinvented-color-wheel.iife.min.js','docs/reinvented-color-wheel.iife.min.js');\""
   },
   "keywords": [
     "color",
@@ -23,6 +37,8 @@
   "author": "",
   "license": "WTFPL",
   "devDependencies": {
+    "cssnano": "^4.0.5",
+    "postcss-cli": "^6.0.0",
     "rimraf": "^2.6.2",
     "rollup": "^0.64.1",
     "rollup-plugin-commonjs": "^9.1.5",
