modify distribution directory structure

--- a/package.json
+++ b/package.json
@@ -2,29 +2,26 @@
   "name": "reinvented-color-wheel",
   "version": "0.0.0",
   "description": "A vanilla-js HSV color picker inspired by Farbtastic Color Picker.",
-  "main": "reinvented-color-wheel.cjs.js",
-  "module": "reinvented-color-wheel.mjs",
-  "types": "reinvented-color-wheel.d.ts",
-  "jsdelivr": "reinvented-color-wheel.iife.min.js",
-  "unpkg": "reinvented-color-wheel.iife.min.js",
+  "main": "cjs/reinvented-color-wheel.js",
+  "module": "es/reinvented-color-wheel.js",
+  "types": "es/reinvented-color-wheel.d.ts",
+  "jsdelivr": "iife/reinvented-color-wheel.min.js",
+  "unpkg": "iife/reinvented-color-wheel.min.js",
   "files": [
-    "reinvented-color-wheel.css",
-    "reinvented-color-wheel.min.css",
-    "reinvented-color-wheel.mjs",
-    "reinvented-color-wheel.cjs.js",
-    "reinvented-color-wheel.iife.js",
-    "reinvented-color-wheel.iife.min.js",
-    "reinvented-color-wheel.d.ts"
+    "css/",
+    "es/",
+    "cjs/",
+    "iife/"
   ],
   "scripts": {
-    "clean": "rimraf reinvented-color-wheel.min.css reinvented-color-wheel.mjs reinvented-color-wheel.*.js reinvented-color-wheel.d.ts",
-    "build": "npm run clean && npm run build:css && npm run build:es && npm run build:cjs && npm run build:iife && npm run build:iife:min && npm run build:docs",
-    "build:css": "postcss reinvented-color-wheel.css -o reinvented-color-wheel.min.css -u cssnano --no-map",
-    "build:es": "tsc -p . --outDir ./ && node -e \"require('fs').renameSync('reinvented-color-wheel.js','reinvented-color-wheel.mjs')\"",
-    "build:cjs": "tsc -p . --outDir ./ -m commonjs && node -e \"require('fs').renameSync('reinvented-color-wheel.js','reinvented-color-wheel.cjs.js')\"",
-    "build:iife": "rollup -c -f iife -n ReinventedColorWheel -i reinvented-color-wheel.mjs -o reinvented-color-wheel.iife.js",
-    "build:iife:min": "uglifyjs -m -c join_vars=true -o reinvented-color-wheel.iife.min.js reinvented-color-wheel.iife.js",
-    "build:docs": "node -e \"var fs=require('fs');fs.copyFileSync('reinvented-color-wheel.min.css','docs/reinvented-color-wheel.min.css');fs.copyFileSync('reinvented-color-wheel.iife.min.js','docs/reinvented-color-wheel.iife.min.js');\""
+    "clean": "rimraf css/ es/ cjs/ iife/",
+    "build": "npm run clean && npm run build:css && npm run build:css:min && npm run build:es && npm run build:cjs && npm run build:bundle && npm run build:docs",
+    "build:css": "cpx src/reinvented-color-wheel.css css/",
+    "build:css:min": "postcss css/reinvented-color-wheel.css -o css/reinvented-color-wheel.min.css -u cssnano --no-map",
+    "build:es": "tsc -p . --outDir es/",
+    "build:cjs": "tsc -p . --outDir cjs/ -m commonjs",
+    "build:bundle": "rollup -c",
+    "build:docs": "cpx css/reinvented-color-wheel.min.css docs/ && cpx iife/reinvented-color-wheel.min.js docs/"
   },
   "keywords": [
     "color",
@@ -37,12 +34,14 @@
   "author": "",
   "license": "WTFPL",
   "devDependencies": {
+    "cpx": "^1.5.0",
     "cssnano": "^4.0.5",
     "postcss-cli": "^6.0.0",
     "rimraf": "^2.6.2",
     "rollup": "^0.64.1",
     "rollup-plugin-commonjs": "^9.1.5",
     "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup-plugin-terser": "^1.0.1",
     "typescript": "^3.0.1",
     "uglify-js": "^3.4.7"
   },
