--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reinvented-color-wheel",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "A vanilla-js HSV color picker inspired by Farbtastic Color Picker.",
   "main": "cjs/reinvented-color-wheel.js",
   "module": "es/reinvented-color-wheel.js",
@@ -35,15 +35,14 @@
   "license": "WTFPL",
   "devDependencies": {
     "cpx": "^1.5.0",
-    "cssnano": "^4.0.5",
+    "cssnano": "^4.1.0",
     "postcss-cli": "^6.0.0",
     "rimraf": "^2.6.2",
-    "rollup": "^0.64.1",
-    "rollup-plugin-commonjs": "^9.1.5",
+    "rollup": "^0.65.0",
+    "rollup-plugin-commonjs": "^9.1.6",
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-terser": "^1.0.1",
-    "typescript": "^3.0.1",
-    "uglify-js": "^3.4.7"
+    "typescript": "^3.0.1"
   },
   "dependencies": {
     "pure-color": "^1.3.0"
