--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "reinvented-color-wheel",
-  "version": "0.1.2",
+  "version": "0.1.4",
   "description": "A vanilla-js touch-friendly HSV color picker inspired by Farbtastic Color Picker.",
+  "repository": "luncheon/reinvented-color-wheel",
   "main": "cjs/reinvented-color-wheel.js",
   "module": "es/reinvented-color-wheel.js",
   "types": "es/reinvented-color-wheel.d.ts",
