calculate hue to one decimal place, reduce conversion error (rgb <=> hsv)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,7 @@
     "noFallthroughCasesInSwitch": true,
     "noUnusedLocals": true,
     "newLine": "LF",
-    "baseUrl": ".",
-    "types": []
+    "baseUrl": "."
   },
   "include": [
     "src/**/*"
