--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "build:css": "cpx src/reinvented-color-wheel.css css/",
     "build:css:min": "postcss css/reinvented-color-wheel.css -o css/reinvented-color-wheel.min.css -u cssnano --no-map",
     "build:es": "tsc -p . --outDir es/",
-    "build:bundle": "rollup -c"
+    "build:bundle": "rollup -c",
+    "test": "jest"
   },
   "keywords": [
     "color",
@@ -33,14 +34,17 @@
   "author": "",
   "license": "WTFPL",
   "devDependencies": {
+    "@types/jest": "^23.3.9",
     "cpx": "^1.5.0",
     "cssnano": "^4.1.7",
+    "jest": "^23.6.0",
     "postcss-cli": "^6.0.1",
     "rimraf": "^2.6.2",
     "rollup": "^0.66.6",
     "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-node-resolve": "^3.4.0",
     "rollup-plugin-terser": "^3.0.0",
+    "ts-jest": "^23.10.4",
     "typescript": "^3.1.4"
   },
   "dependencies": {
