--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   "scripts": {
     "clean": "rimraf css/ es/ cjs/ iife/",
     "build": "npm run clean && npm run build:css && npm run build:css:min && npm run build:es && npm run build:bundle",
-    "build:css": "cpx src/reinvented-color-wheel.css css/",
-    "build:css:min": "postcss css/reinvented-color-wheel.css -o css/reinvented-color-wheel.min.css -u cssnano --no-map",
+    "build:css": "copyup src/reinvented-color-wheel.css css/",
+    "build:css:min": "cleancss css/reinvented-color-wheel.css -o css/reinvented-color-wheel.min.css",
     "build:es": "tsc -p . --outDir es/",
     "build:bundle": "rollup -c",
     "test": "jest"
@@ -34,18 +34,17 @@
   "author": "",
   "license": "WTFPL",
   "devDependencies": {
-    "@types/jest": "^24.0.11",
-    "cpx": "^1.5.0",
-    "cssnano": "^4.1.10",
-    "jest": "^24.5.0",
-    "postcss-cli": "^6.1.2",
+    "@types/jest": "^24.0.13",
+    "clean-css-cli": "^4.3.0",
+    "copyfiles": "^2.1.0",
+    "jest": "^24.8.0",
     "rimraf": "^2.6.3",
-    "rollup": "^1.6.0",
-    "rollup-plugin-commonjs": "^9.2.1",
-    "rollup-plugin-node-resolve": "^4.0.1",
-    "rollup-plugin-terser": "^4.0.4",
-    "ts-jest": "^24.0.0",
-    "typescript": "^3.3.3333"
+    "rollup": "^1.15.1",
+    "rollup-plugin-commonjs": "^10.0.0",
+    "rollup-plugin-node-resolve": "^5.0.1",
+    "rollup-plugin-terser": "^5.0.0",
+    "ts-jest": "^24.0.2",
+    "typescript": "^3.5.1"
   },
   "dependencies": {
     "pure-color": "^1.3.0"
