--- a/package.json
+++ b/package.json
@@ -15,9 +15,8 @@
     "iife/"
   ],
   "scripts": {
-    "clean": "rimraf css/ es/ cjs/ iife/",
-    "build": "npm run clean && npm run build:css && npm run build:css:min && npm run build:es && npm run build:bundle && npm run copy",
-    "build:css": "copyup src/reinvented-color-wheel.css css/",
+    "clean": "rimraf css/*.min.css es/ cjs/ iife/",
+    "build": "npm run clean && npm run build:css:min && npm run build:es && npm run build:bundle && npm run copy",
     "build:css:min": "cleancss css/reinvented-color-wheel.css -o css/reinvented-color-wheel.min.css",
     "build:es": "tsc -p . --outDir es/",
     "build:bundle": "rollup -c",
@@ -36,17 +35,18 @@
   "author": "",
   "license": "WTFPL",
   "devDependencies": {
-    "@types/jest": "^24.0.18",
+    "@rollup/plugin-commonjs": "^11.0.2",
+    "@rollup/plugin-node-resolve": "^7.1.1",
+    "@types/jest": "^25.1.4",
     "clean-css-cli": "^4.3.0",
-    "copyfiles": "^2.1.1",
-    "jest": "^24.9.0",
-    "rimraf": "^3.0.0",
-    "rollup": "^1.20.3",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-terser": "^5.1.1",
-    "ts-jest": "^24.0.2",
-    "typescript": "^3.6.2"
+    "copyfiles": "^2.2.0",
+    "jest": "^25.1.0",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.0.3",
+    "rollup-plugin-filesize": "^6.2.1",
+    "rollup-plugin-terser": "^5.3.0",
+    "ts-jest": "^25.2.1",
+    "typescript": "^3.6.5"
   },
   "dependencies": {
     "pure-color": "^1.3.0"
