--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "css/",
     "es/",
     "cjs/",
-    "iife/"
+    "iife/",
+    "react/index.d.ts",
+    "react/index.js"
   ],
   "scripts": {
     "clean": "rimraf css/*.min.css es/ cjs/ iife/",
-    "build": "npm run clean && npm run build:css:min && npm run build:es && npm run build:bundle && npm run copy",
+    "build": "npm run clean && npm run build:css:min && npm run build:es && npm run build:react && npm run build:bundle && npm run copy",
     "build:css:min": "cleancss css/reinvented-color-wheel.css -o css/reinvented-color-wheel.min.css",
     "build:es": "tsc -p . --outDir es/",
+    "build:react": "tsc -p react && esbuild --bundle --tsconfig=react/tsconfig.json --define:process.env.NODE_ENV=\\'development\\' --outfile=react/sample.js react/sample.tsx",
     "build:bundle": "rollup -c",
     "copy": "copyfiles -f iife/reinvented-color-wheel.min.js css/reinvented-color-wheel.min.css docs/",
     "test": "jest",
@@ -38,9 +41,13 @@
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.1",
     "@types/jest": "^26.0.19",
+    "@types/react": "^17.0.2",
     "clean-css-cli": "^4.3.0",
     "copyfiles": "^2.4.1",
+    "esbuild": "^0.8.53",
     "jest": "^26.6.3",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "rimraf": "^3.0.2",
     "rollup": "^2.35.1",
     "rollup-plugin-filesize": "^9.1.0",
