--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reinvented-color-wheel",
-  "version": "0.2.10",
+  "version": "0.3.0",
   "description": "A vanilla-js touch-friendly HSV color picker inspired by Farbtastic Color Picker.",
   "repository": "luncheon/reinvented-color-wheel",
   "main": "cjs/reinvented-color-wheel.js",
@@ -33,7 +33,8 @@
     "picker",
     "color-picker",
     "vanilla",
-    "vanilla-js"
+    "vanilla-js",
+    "react"
   ],
   "author": "",
   "license": "WTFPL",
