--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "build": "npm run clean && npm run build:css:min && npm run build:es && npm run build:react && npm run build:wc && npm run build:bundle && npm run copy",
     "build:css:min": "cleancss css/reinvented-color-wheel.css -o css/reinvented-color-wheel.min.css",
     "build:es": "tsc -p . --outDir es/",
-    "build:react": "tsc -p react && esbuild --bundle --tsconfig=react/tsconfig.json --define:process.env.NODE_ENV=\\'development\\' --outfile=react/sample.js react/sample.tsx",
+    "build:react": "tsc -p react && esbuild --bundle --tsconfig=react/tsconfig.json --target=esnext --define:process.env.NODE_ENV=\\'development\\' --outfile=react/sample.js react/sample.tsx",
     "build:wc": "node webcomponents/build.js",
     "build:bundle": "rollup -c",
     "copy": "copyfiles -f iife/reinvented-color-wheel.min.js css/reinvented-color-wheel.min.css docs/",
@@ -43,22 +43,22 @@
   "author": "",
   "license": "WTFPL",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^19.0.0",
-    "@rollup/plugin-node-resolve": "^13.0.0",
-    "@types/react": "^17.0.11",
-    "clean-css-cli": "^5.3.0",
+    "@rollup/plugin-commonjs": "^20.0.0",
+    "@rollup/plugin-node-resolve": "^13.0.4",
+    "@types/react": "^17.0.19",
+    "clean-css-cli": "^5.3.3",
     "copyfiles": "^2.4.1",
-    "esbuild": "^0.11.23",
-    "esbuild-svelte": "^0.5.1",
-    "jest": "^27.0.5",
+    "esbuild": "^0.12.24",
+    "esbuild-svelte": "^0.5.4",
+    "jest": "^27.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "rimraf": "^3.0.2",
-    "rollup": "^2.52.2",
+    "rollup": "^2.56.3",
     "rollup-plugin-filesize": "^9.1.1",
     "rollup-plugin-terser": "^7.0.2",
-    "ts-jest": "^27.0.3",
-    "typescript": "^4.3.4"
+    "ts-jest": "^27.0.5",
+    "typescript": "^4.4.2"
   },
   "dependencies": {
     "pure-color": "^1.3.0"
