--- a/package.json
+++ b/package.json
@@ -43,23 +43,23 @@
   "author": "",
   "license": "WTFPL",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^22.0.1",
-    "@rollup/plugin-node-resolve": "^13.3.0",
-    "@types/react": "^18.0.15",
-    "clean-css-cli": "^5.6.1",
+    "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-terser": "^0.4.0",
+    "@types/react": "^18.0.27",
+    "clean-css-cli": "^5.6.2",
     "copyfiles": "^2.4.1",
-    "esbuild": "^0.14.49",
-    "esbuild-svelte": "^0.7.1",
-    "jest": "^28.1.3",
+    "esbuild": "^0.17.5",
+    "esbuild-svelte": "^0.7.3",
+    "jest": "^29.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "rimraf": "^3.0.2",
-    "rollup": "^2.77.0",
+    "rimraf": "^4.1.2",
+    "rollup": "^3.14.0",
     "rollup-plugin-filesize": "^9.1.2",
-    "rollup-plugin-terser": "^7.0.2",
-    "terser": "^5.14.2",
-    "ts-jest": "^28.0.7",
-    "typescript": "~4.4.4"
+    "terser": "^5.16.3",
+    "ts-jest": "^29.0.5",
+    "typescript": "^4.9.5"
   },
   "dependencies": {
     "pure-color": "^1.3.0"
