--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "webcomponents/index.js"
   ],
   "scripts": {
-    "clean": "rimraf css/*.min.css es/ cjs/ iife/ react/index.d.ts react/index.js react/sample.js webcomponents/index.js webcomponents/sample.js",
+    "clean": "rimraf --glob css/*.min.css es/ cjs/ iife/ react/index.d.ts react/index.js react/sample.js webcomponents/index.js webcomponents/sample.js",
     "build": "npm run clean && npm run build:css:min && npm run build:es && npm run build:react && npm run build:wc && npm run build:bundle && npm run copy",
     "build:css:min": "cleancss css/reinvented-color-wheel.css -o css/reinvented-color-wheel.min.css",
     "build:es": "tsc -p . --outDir es/",
-    "build:react": "tsc -p react && esbuild --bundle --tsconfig=react/tsconfig.json --target=esnext --define:process.env.NODE_ENV=\\'development\\' --outfile=react/sample.js react/sample.tsx",
+    "build:react": "tsc -p react && esbuild --bundle --tsconfig=react/tsconfig.json --target=esnext --define:process.env.NODE_ENV='development' --outfile=react/sample.js react/sample.tsx",
     "build:wc": "node webcomponents/build.js",
     "build:bundle": "rollup -c",
     "copy": "copyfiles -f iife/reinvented-color-wheel.min.js css/reinvented-color-wheel.min.css docs/",
@@ -54,7 +54,7 @@
     "jest": "^29.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "rimraf": "^4.1.2",
+    "rimraf": "^6.0.1",
     "rollup": "^3.14.0",
     "rollup-plugin-filesize": "^9.1.2",
     "terser": "^5.16.3",
