--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "build:wc": "node webcomponents/build.js",
     "build:bundle": "rollup -c",
     "copy": "copyfiles -f iife/reinvented-color-wheel.min.js css/reinvented-color-wheel.min.css docs/",
-    "test": "jest",
-    "verify": "cd verify/ts2.1 && npm ci && npm t"
+    "test": "jest"
   },
   "keywords": [
     "color",
@@ -43,23 +42,23 @@
   "author": "",
   "license": "WTFPL",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^24.0.1",
-    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-commonjs": "~24.0.1",
+    "@rollup/plugin-node-resolve": "^16.0.0",
     "@rollup/plugin-terser": "^0.4.0",
     "@types/react": "^18.0.27",
-    "clean-css-cli": "^5.6.2",
+    "clean-css-cli": "^5.6.3",
     "copyfiles": "^2.4.1",
-    "esbuild": "^0.17.5",
-    "esbuild-svelte": "^0.7.3",
-    "jest": "^29.4.1",
+    "esbuild": "^0.17.19",
+    "esbuild-svelte": "^0.8.2",
+    "jest": "^29.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rimraf": "^6.0.1",
-    "rollup": "^3.14.0",
-    "rollup-plugin-filesize": "^9.1.2",
-    "terser": "^5.16.3",
-    "ts-jest": "^29.0.5",
-    "typescript": "^4.9.5"
+    "rollup": "^3.29.5",
+    "rollup-plugin-filesize": "^10.0.0",
+    "terser": "5.16.3",
+    "ts-jest": "^29.2.5",
+    "typescript": "~5.4.5"
   },
   "dependencies": {
     "pure-color": "^1.3.0"
